--- a/plugins/styleinspector/CMakeLists.txt
+++ b/plugins/styleinspector/CMakeLists.txt
@@ -24,7 +24,7 @@ gammaray_add_plugin(gammaray_styleinspector_plugin
 )
 
 target_link_libraries(gammaray_styleinspector_plugin
-  ${Qt5Gui_LIBRARIES} ${Qt5Widgets_LIBRARIES}
+  Qt5::Gui Qt5::Widgets
   gammaray_core
 )
 endif()
