--- a/plugins/sceneinspector/CMakeLists.txt
+++ b/plugins/sceneinspector/CMakeLists.txt
@@ -14,7 +14,7 @@ gammaray_add_plugin(gammaray_sceneinspector_plugin
 )
 
 target_link_libraries(gammaray_sceneinspector_plugin
-  ${Qt5Gui_LIBRARIES} ${Qt5Widgets_LIBRARIES}
+  Qt5::Gui Qt5::Widgets
   gammaray_kitemmodels
   gammaray_core
 )
