CMake: Don't require cxx_deleted_functions
MSVC 2013's support for deleted functions is incomplete, thus cmake
won't concede cxx_deleted_functions support to MSVC 2013. Thus
compilation with MSVC2013 is currently broken. Given we don't even use
deleted functions currently, we can safely remove this requirement.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,7 @@ if(BAD_CXX_MESSAGE)
 endif()
 set(GAMMARAY_REQUIRED_CXX_FEATURES
         cxx_lambdas cxx_nullptr cxx_range_for cxx_raw_string_literals cxx_uniform_initialization
-        cxx_variadic_templates cxx_rvalue_references cxx_defaulted_functions cxx_deleted_functions
+        cxx_variadic_templates cxx_rvalue_references cxx_defaulted_functions
         cxx_override cxx_final cxx_nonstatic_member_init
    )
 
