appveyor: Fix casing

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -18,8 +18,8 @@ APPVEYOR_BUILD_FOLDER = ${Variables:Root}
 # Settings are Category/key=value
 # Category is case sensitive
 [GeneralSettings]
-Paths/python = C:\Python36
-Paths/python27 = C:\Python27
+Paths/Python = C:\Python36
+Paths/Python27 = C:\Python27
 Paths/Msys = ${Variables:Msys}
 Paths/DownloadDir = ${Variables:Root}/downloads
 ShortPath/Enabled = False
