--- a/tests/manual/CMakeLists.txt
+++ b/tests/manual/CMakeLists.txt
@@ -51,7 +51,7 @@ add_executable(signalmonitortest signalmonitortest.cpp)
 
 target_link_libraries(signalmonitortest
   Qt5::Core
-  Qt5::Gui Qt5::Widgets
+  Qt5::Gui
 )
 
 add_executable(objectreparenttest objectreparenttest.cpp)
