Store receiver of DeferredDelete event and method name and args of MetaCall event

--- a/plugins/eventmonitor/CMakeLists.txt
+++ b/plugins/eventmonitor/CMakeLists.txt
@@ -1,5 +1,8 @@
 # probe part
 if (NOT GAMMARAY_CLIENT_ONLY_BUILD)
+
+include_directories( ${Qt5Quick_PRIVATE_INCLUDE_DIRS} )
+
 set(gammaray_eventmonitor_plugin_srcs
   eventmonitor.cpp
   eventmodel.cpp
