Add changing background color for event count cells

--- a/plugins/eventmonitor/CMakeLists.txt
+++ b/plugins/eventmonitor/CMakeLists.txt
@@ -28,6 +28,7 @@ if(GAMMARAY_BUILD_UI)
     eventmonitorwidget.cpp
     eventmonitorinterface.cpp
     eventmonitorclient.cpp
+    eventtypeclientproxymodel.cpp
   )
 
   gammaray_add_plugin(gammaray_eventmonitor_ui_plugin
