Explicitly add QtCore private include directory
Needed to build with a minimal Qt 5.14.

--- a/plugins/eventmonitor/CMakeLists.txt
+++ b/plugins/eventmonitor/CMakeLists.txt
@@ -16,6 +16,7 @@ gammaray_add_plugin(gammaray_eventmonitor_plugin
   SOURCES ${gammaray_eventmonitor_plugin_srcs}
 )
 
+target_include_directories(gammaray_eventmonitor_plugin SYSTEM PRIVATE ${Qt5Core_PRIVATE_INCLUDE_DIRS})
 target_link_libraries(gammaray_eventmonitor_plugin
   Qt5::Gui
   gammaray_core
