Make private include path handling work with Qt6 too
This is quite ugly, but as long as we support Qt < 5.9 we can't use the
private targets yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -267,23 +267,29 @@ macro(add_flag_if_supported flag name)
   append_if("CXX_SUPPORTS_${name}" "${flag}" CMAKE_CXX_FLAGS)
 endmacro()
 
-function(check_private_headers_exist module private_includes_var)
+function(check_private_headers_exist module)
   message(STATUS "Checking whether private include directories for module ${module} exist")
-  foreach(_dir ${private_includes_var})
-    if(NOT EXISTS "${_dir}")
-      message(FATAL_ERROR "The private include directory ${_dir} for module ${module} do not exist! Please make sure your Qt5 installation contains private headers.\nThe required directories:\n  ${private_includes_var}")
+  # backward compatibility with Qt < 5.9
+  if (TARGET Qt5::${module}Private)
+    get_target_property(private_includes Qt5::${module}Private INTERFACE_INCLUDE_DIRECTORIES)
+    set(Qt5${module}_PRIVATE_INCLUDE_DIRS "${private_includes}" PARENT_SCOPE)
+  endif()
+  foreach(dir ${Qt5${module}_PRIVATE_INCLUDE_DIRS})
+    if(NOT EXISTS "${dir}")
+      message(FATAL_ERROR "The private include directory ${dir} for module ${module} do not exist! Please make sure your Qt5 installation contains private headers.\nThe required directories:\n  ${Qt5${module}_PRIVATE_INCLUDE_DIRS}")
     endif()
   endforeach()
 endfunction()
-function(check_private_header_exists _file _dirs)
-  set(_found FALSE)
-  foreach(_dir ${_dirs})
-    if(EXISTS "${_dir}/${_file}")
-      set(_found TRUE)
+
+function(check_private_header_exists module file)
+  set(found FALSE)
+  foreach(dir ${Qt5${module}_PRIVATE_INCLUDE_DIRS})
+    if(EXISTS "${dir}/${file}")
+      set(found TRUE)
     endif()
   endforeach()
-  if(NOT _found)
-    message(FATAL_ERROR "The private include file ${_file} was not found in directory ${_dirs}! Please make sure your Qt5 installation contains private headers.")
+  if(NOT found)
+    message(FATAL_ERROR "The private include file ${file} was not found in directory ${Qt5${module}_PRIVATE_INCLUDE_DIRS}! Please make sure your Qt5 installation contains private headers.")
   endif()
 endfunction()
 
@@ -427,30 +433,27 @@ if(GAMMARAY_BUILD_UI) # widgets are required for the UI
   endif()
 endif()
 
-# Sanity checking, we need private includes for the following modules
-check_private_headers_exist("Qt5Core" "${Qt5Core_PRIVATE_INCLUDE_DIRS}")
-check_private_header_exists("private/qobject_p.h" "${Qt5Core_PRIVATE_INCLUDE_DIRS}")
-check_private_headers_exist("Qt5Gui" "${Qt5Gui_PRIVATE_INCLUDE_DIRS}")
+# Sanity checking, we need private includes for the following modules, and < Qt 5.9 backward compatibility
+check_private_headers_exist(Core)
+check_private_header_exists(Core "private/qobject_p.h")
+check_private_headers_exist(Gui)
+list(APPEND Qt5Gui_PRIVATE_INCLUDE_DIRS ${Qt5Core_PRIVATE_INCLUDE_DIRS})
+if(Qt5Widgets_FOUND)
+    check_private_headers_exist(Widgets)
+    list(APPEND Qt5Widgets_PRIVATE_INCLUDE_DIRS ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
+endif()
 if(Qt5Qml_FOUND)
-  check_private_headers_exist("Qt5Qml" "${Qt5Qml_PRIVATE_INCLUDE_DIRS}")
-  #HACK: CMake with broken Qt5Qml_PRIVATE_INCLUDE_DIRS
-  if(NOT "${Qt5Qml_PRIVATE_INCLUDE_DIRS}" MATCHES "/QtQml/")
-    string(REPLACE "/QtCore" "/QtQml" replaceme "${Qt5Core_PRIVATE_INCLUDE_DIRS}")
-    list(APPEND Qt5Qml_PRIVATE_INCLUDE_DIRS ${replaceme})
-    list(REMOVE_DUPLICATES Qt5Qml_PRIVATE_INCLUDE_DIRS)
-  endif()
-  check_private_header_exists("private/qqmlabstractbinding_p.h" "${Qt5Qml_PRIVATE_INCLUDE_DIRS}")
+    check_private_headers_exist(Qml)
+    check_private_header_exists(Qml "private/qqmlabstractbinding_p.h")
+    list(APPEND Qt5Qml_PRIVATE_INCLUDE_DIRS ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
 endif()
 if(Qt5Quick_FOUND)
-  check_private_headers_exist("Qt5Quick" "${Qt5Quick_PRIVATE_INCLUDE_DIRS}")
-  #HACK: CMake with broken Qt5Quick_PRIVATE_INCLUDE_DIRS
-  if(NOT "${Qt5Quick_PRIVATE_INCLUDE_DIRS}" MATCHES "/QtQuick/")
-    string(REPLACE "/QtCore" "/QtQuick" replaceme "${Qt5Core_PRIVATE_INCLUDE_DIRS}")
+    check_private_headers_exist(Quick)
+    check_private_header_exists(Quick "private/qquickitem_p.h")
     list(APPEND Qt5Quick_PRIVATE_INCLUDE_DIRS ${Qt5Qml_PRIVATE_INCLUDE_DIRS})
-    list(APPEND Qt5Quick_PRIVATE_INCLUDE_DIRS ${replaceme})
-    list(REMOVE_DUPLICATES Qt5Quick_PRIVATE_INCLUDE_DIRS)
-  endif()
-  check_private_header_exists("private/qquickitem_p.h" "${Qt5Quick_PRIVATE_INCLUDE_DIRS}")
+endif()
+if(Qt5Scxml_FOUND)
+    check_private_headers_exist(Scxml)
 endif()
 
 set(HAVE_QT_CONCURRENT ${Qt5Concurrent_FOUND})
