Add a OpenGL ES2 fallback for the geometry inspector
This should help with Windows deployments that have no proper GL stack but
just ANGLE available.

--- a/plugins/qt3dinspector/CMakeLists.txt
+++ b/plugins/qt3dinspector/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_subdirectory(geometryextension)
+add_subdirectory(geometryextension/es2)
+add_subdirectory(geometryextension/gl3)
 
 # shared stuff
 set(gammaray_3dinspector_shared_srcs
