Restore the private header hack for old broken Qt cmake config files
Still needed by a few older Linux distros on OBS apparently.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -274,6 +274,15 @@ function(check_private_headers_exist module)
     get_target_property(private_includes Qt5::${module}Private INTERFACE_INCLUDE_DIRECTORIES)
     set(Qt5${module}_PRIVATE_INCLUDE_DIRS "${private_includes}" PARENT_SCOPE)
   endif()
+
+  # HACK to work around broken Qt cmake configurations in older Qt version (up to 5.7 at least)
+  if(NOT "${Qt5${module}_PRIVATE_INCLUDE_DIRS}" MATCHES "/Qt${module}/")
+    string(REPLACE "/QtCore" "/Qt${module}" replaceme "${Qt5Core_PRIVATE_INCLUDE_DIRS}")
+    list(APPEND Qt5${module}_PRIVATE_INCLUDE_DIRS ${replaceme})
+    list(REMOVE_DUPLICATES Qt5${module}_PRIVATE_INCLUDE_DIRS)
+    set(Qt5${module}_PRIVATE_INCLUDE_DIRS ${Qt5${module}_PRIVATE_INCLUDE_DIRS} PARENT_SCOPE)
+  endif()
+
   foreach(dir ${Qt5${module}_PRIVATE_INCLUDE_DIRS})
     if(NOT EXISTS "${dir}")
       message(FATAL_ERROR "The private include directory ${dir} for module ${module} do not exist! Please make sure your Qt5 installation contains private headers.\nThe required directories:\n  ${Qt5${module}_PRIVATE_INCLUDE_DIRS}")
