--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -865,5 +865,9 @@ elseif(UNIX)
 endif()
 
 include(CPack)
+include(PackageIFW)
+
+addPackageTarget(GammaRay gammaray_probe install lib)
+addPackageTarget(GammaRay gammaray install tools)
 
 feature_summary(WHAT ALL INCLUDE_QUIET_PACKAGES FATAL_ON_MISSING_REQUIRED_PACKAGES)
