Signal when external server address changed
Also, deal more gracefully with calling externalAddress() too early, before
we have opened a socket.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -164,6 +164,7 @@ if(NOT GAMMARAY_PROBE_ONLY_BUILD)
     typetraits.h
     util.h
     varianthandler.h
+    remote/server.h
   )
 
   ecm_generate_pri_file(BASE_NAME GammaRayCore
